# AlphaCC

./: .dockerignore  .env.docker  .gitattributes  .gitignore  Dockerfile  Dockerfile.main  Dockerfile.webapp  Makefile  Readme.md  Roadmap.md  compose.yaml  demo.py  demo_backend.py  docker-compose.training-gpu-dbg-5.yaml  docker-compose.training-gpu-dbg-6.yaml  docker-compose.training-gpu-dbg-7.yaml  docker-compose.training-gpu-dbg-8.yaml  docker-compose.training-gpu-dbg-9.yaml  docker-compose.training-gpu-dbg.yaml  docker-compose.training-gpu.yaml  docker-compose.training.yaml  docker-compose.webapp.yaml  docker-compose.yaml  make.sh  pyproject.toml  requirements.txt  run-app.sh  setup.cfg  setup.py
agents/: base_agent.py
agents/heuristic_agents/: dummy_agent.py  greedy_agent.py
alpha-cc/: Cargo.toml  pyproject.toml
alpha-cc/src/: board.rs  hexcoordinate.rs  lib.rs  main.rs  moves.rs
alpha-cc/src/board/: hexcoordinate.rs  mod.rs
alpha_cc/: __init__.py  demo.py  eval_weights.py  logs.py  test_training.py
alpha_cc/agents/: __init__.py  agent.py  base_agent.py  heuristic.py
alpha_cc/api/: endpoints.py  expceptions.py
alpha_cc/config/: __init__.py  environment.py
alpha_cc/db/: __init__.py  games_db.py  prediction_db.py  redis_dbs.py  training_db.py
alpha_cc/dev_tools/: decorators.py  timer.py
alpha_cc/engine/: __init__.py  __init__.pyi  engine_utils.py
alpha_cc/engine/backend/: Cargo.toml  pyproject.toml
alpha_cc/engine/backend/src/: board.rs  hexcoordinate.rs  lib.rs  moves.rs
alpha_cc/engine/backend/src/cc/: board.rs  board_info.rs  hexcoord.rs  mod.rs  move.rs  moves.rs
alpha_cc/engine/backend/src/cc/pred_db/: mod.rs
alpha_cc/engine/backend/src/cc/rollouts/: mcts.rs  mod.rs  nn_remote.rs  pred_db.rs
alpha_cc/entrypoints/: db_game_inspection.py  eval_weights.py  logs.py  nn_service_thread.py  param_schedule_eval.py  singlethread_training.py  tournament.py  trainer_thread.py  worker_thread.py
alpha_cc/proto/: predict_pb2.py  predict_pb2.pyi  predict_pb2_grpc.py
alpha_cc/reward/: __init__.py  heuristic_reward.py  reward_function.py
benchmarks/: bench_post_preds.py
docker/: pred-db.yaml
engine/: Cargo.toml  build.rs  pyproject.toml
engine/arena/: Cargo.toml
engine/arena/src/: agent.rs  app.rs  board_widget.rs  game.rs  input.rs  main.rs  modal.rs  renderer.rs  sidebar.rs  status_bar.rs  styling.rs  theme.rs  visual.rs
engine/arena/src/cc/: mod.rs  renderer.rs  visual.rs
engine/arena/src/hex/: backend.rs  glyph_backend.rs  layers.rs  layout.rs  mod.rs
engine/core/: Cargo.toml
engine/core/src/: board.rs  board_info.rs  dtypes.rs  game_move.rs  hexcoord.rs  lib.rs  moves.rs
engine/core/src/cc/: cc_board.rs  mod.rs  moves.rs
engine/mcts/: Cargo.toml
engine/mcts/src/: lib.rs  mcts.rs  mcts_node.rs  noise.rs  outcome.rs  stats.rs  tree.rs
engine/mcts/src/search/: mod.rs
engine/mcts/src/search/descent/: improved.rs  mod.rs  puct.rs
engine/mcts/src/search/scheduler/: free.rs  halving.rs  mod.rs
engine/mcts/tests/: mcts_tests.rs
engine/nn/: Cargo.toml
engine/nn-service/: Cargo.toml  README.md  build.rs
engine/nn-service/proto/: predict.proto
engine/nn-service/src/: client.rs  io.rs  lib.rs  nn_remote.rs  prediction_client.rs
engine/nn-service/src/backends/: mod.rs  respond.rs
engine/nn-service/src/backends/cpu/: backend.rs  mod.rs
engine/nn-service/src/backends/onnx/: backend.rs  decoder.rs  encoder.rs  inference.rs  mod.rs
engine/nn-service/src/db/: training_db.rs
engine/nn-service/src/reloads/: reloader.rs
engine/nn-service/src/server/: config.rs  management.rs  mod.rs  server.rs  service.rs  types.rs
engine/nn-service/src/server/stages/: batcher.rs  decoder.rs  encoder.rs  inference.rs  responder.rs
engine/nn/src/: board_encoding.rs  cc_encoding.rs  client.rs  game.rs  game_config.rs  inference_utils.rs  io.rs  lib.rs  mock.rs  nn_dtypes.rs  nn_pred.rs  nn_remote.rs  prediction_client.rs  prediction_source.rs
engine/proto/: predict.proto
engine/python/: Cargo.toml  pyproject.toml
engine/python/alpha_cc_engine/: .gitignore  __init__.py
engine/python/src/: lib.rs
engine/python/src/core/: board.rs  board_info.rs  functions.rs  game_config.rs  game_move.rs  hexcoord.rs  mod.rs
engine/python/src/mcts/: mcts.rs  mcts_node.rs  mod.rs  params.rs  prediction_sources.rs  rollout_result.rs
engine/python/src/nn/: fetch_stats.rs  functions.rs  mod.rs  nn_pred.rs
engine/src/: lib.rs
engine/src/cc/: board.rs  board_info.rs  dtypes.rs  mod.rs  move.rs
engine/src/cc/game/: board.rs  board_info.rs  dtypes.rs  hexcoord.rs  mod.rs  move.rs  moves.rs
engine/src/cc/pred_db/: memcached_binary.rs  mod.rs  nn_pred.rs  pred_db_channel.rs
engine/src/cc/predictions/: client.rs  inference_utils.rs  mod.rs  nn_pred.rs  nn_remote.rs
engine/src/cc/rollouts/: mcts.rs  mcts_node.rs  mcts_params.rs  mod.rs  nn_remote.rs  noise.rs  tree.rs
engine/src/db/: mod.rs  training_db.rs
engine/src/nn/: client.rs  io.rs  mod.rs
engine/src/nn/backends/: mod.rs  respond.rs
engine/src/nn/backends/cpu/: backend.rs
engine/src/nn/backends/onnx/: backend.rs  decoder.rs  encoder.rs  inference.rs
engine/src/nn/backends/pytorch/: backend.rs  decoder.rs  encoder.rs  inference.rs  mod.rs
engine/src/nn/backends/torchrs/: backend.rs  decoder.rs  encoder.rs  inference.rs  mod.rs
engine/src/nn/reloads/: mod.rs  reloader.rs  training_db.rs
engine/src/nn/server/: config.rs  gate.rs  management.rs  mod.rs  server.rs  service.rs  types.rs
engine/src/nn/server/stages/: batcher.rs  decoder.rs  encoder.rs  inference.rs  mod.rs  responder.rs
engine/src/tui/: agent.rs  app.rs  board_widget.rs  game.rs  input.rs  mod.rs  modal.rs  sidebar.rs  status_bar.rs  theme.rs
engine/src/tui/hex/: backend.rs  glyph_backend.rs  layers.rs  layout.rs
runtime/: runtime.py
tests/: common.py  test_board_cache.py  test_db_game_state.py  test_engine.py  test_mctsnodepy.py  test_runtime.py  test_rust_bindings.py  test_state.py  test_tensor_indexing.py  test_worker.py
webapp/: angular.json  package-lock.json  package.json
(+172 files in other folders)
