[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip = "package"

[tool.mypy]
disallow_untyped_defs = true
exclude = "package"
follow_imports_for_stubs = true
ignore_missing_imports = true
no_implicit_optional = false
scripts_are_modules = true
show_column_numbers = true
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 120
lint.select = [
    "A",    # flake8-builtins
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C",    # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # Pyflakes
    "I",    # isort-like
    "N",    # pep8-naming
    "PD",   # pandas rules
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RUF",  # Ruff-specific rules (unicode checkig, and check for redundant "noqa: ...")
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "T",    # flake8-print
    "UP",   # pyupgrade
    "W",    # newline at end of file, disallow bad excape sequences
]
lint.ignore = [
    "ANN101",  # MissingTypeSelf
    "ANN401",  # Dynamically typed expressions in args/kwargs
    "B905",    # Allow zip without strict kwarg
    "C90",     # McCabe complexity
    "PD901",   # Allow df as a name
    "RET504",  # Unnecessary var assignment before return
]
lint.unfixable = [
    "T201",   # print statement removal should be manual
    "T203",   # pprint statement removal should be manual
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py files
"tests/**/*.py" = ["D", "S101"]  # drop all docs reqs and allow assert statements
