[package]
name = "alpha-cc-engine"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alpha_cc_engine"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
numpy = "0.28"
bitcode = "0.6"
indexmap = "2.13.0"
redis = "1.0.4"
rand_distr = "0.6.0"
rand = "0.10.0"
lru = "0.16.3"
zmq = "0.10.0"
lazy_static = "1.5.0"
