[package]
name = "alpha-cc-engine"
version = "0.1.4"
edition = "2021"

[lib]
name = "alpha_cc_engine"
crate-type = ["cdylib", "lib"]

[dependencies]
# Core
bitcode = "0.6"
indexmap = "2.13.0"
rand_distr = "0.6.0"
rand = "0.10.0"
lru = "0.16.3"
dashmap = "6"
bytemuck = { version = "1.25.0", features = ["derive"] }
libc = "0.2"
tikv-jemallocator = { version = "0.6.1", optional = true }
mimalloc = { version = "0.1.48", optional = true }
anyhow = "1.0.102"
arc-swap = "1.9.0"
log = "0.4"
env_logger = "0.11"

# Python extension (optional — only for cdylib/worker builds)
pyo3 = { version = "0.28.3", features = ["auto-initialize"], optional = true }
numpy = { version = "0.28", optional = true }

# nn-service: gRPC + inference
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.6.0", features = ["derive"] }
redis = "1.1.0"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "cuda", "tensorrt"] }

# TUI (optional — only for the interactive game client)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = []
extension-module = ["dep:pyo3", "pyo3/extension-module", "pyo3/multiple-pymethods", "dep:numpy", "dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]
tui = ["dep:ratatui", "dep:crossterm"]

[[bin]]
name = "nn-service"
path = "src/bin/nn_service/main.rs"

[[bin]]
name = "tui"
path = "src/bin/tui/main.rs"
required-features = ["tui"]

[build-dependencies]
tonic-prost-build = "0.14.5"
