[build-system]
requires = ["maturin>=1.5.0"]
build-backend = "maturin"

[project]
name = "alpha-cc-engine"
version = "0.3.0"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
