[package]
name = "alpha-cc-arena"
version = "0.1.0"
edition = "2021"

[dependencies]
alpha-cc-core = { path = "../core" }
alpha-cc-nn = { path = "../nn" }
alpha-cc-mcts = { path = "../mcts" }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.6.0", features = ["derive"] }
rand = "0.10.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0.102"

[[bin]]
name = "arena"
path = "src/main.rs"
