[package]
name = "alpha-cc-nn-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "alpha_cc_nn_service"

[dependencies]
alpha-cc-core = { path = "../core" }
alpha-cc-nn = { path = "../nn" }
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
anyhow = "1.0.102"
arc-swap = "1.9.0"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.25.0", features = ["derive"] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "cuda", "tensorrt"] }
libc = "0.2"
redis = "1.1.0"
clap = { version = "4.6.0", features = ["derive"] }
tikv-jemallocator = { version = "0.6.1", optional = true }

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]

[[bin]]
name = "nn-service"
path = "src/bin/nn_service/main.rs"
