[package]
name = "alpha-cc-nn"
version = "0.1.0"
edition = "2021"

[dependencies]
alpha-cc-core = { path = "../core" }
bitcode = "0.6"
bytemuck = { version = "1.25.0", features = ["derive"] }
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
rand = "0.10.0"
log = "0.4"

pyo3 = { version = "0.28.3", features = ["auto-initialize"], optional = true }
numpy = { version = "0.28", optional = true }

[features]
default = []
extension-module = ["dep:pyo3", "pyo3/extension-module", "pyo3/multiple-pymethods", "dep:numpy", "alpha-cc-core/extension-module"]

[build-dependencies]
tonic-prost-build = "0.14.5"
