[package]
name = "alpha-cc-engine"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alpha_cc_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
bincode = "1.3.3"
indexmap = "2.2.6"
redis = "0.25.3"
rand_distr = "0.4.3"
rand = "0.8.5"
lru = "0.12.3"
