[build-system]
requires = ["maturin>=1.5.0"]
build-backend = "maturin"

[project]
name = "alpha-cc-engine"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
